fix(Overall): VAN-21179 fix some pages will not show the scrollbar.

--- a/vtr-ui/src/app/app.component.scss
+++ b/vtr-ui/src/app/app.component.scss
@@ -11,6 +11,7 @@
 	overflow-y: auto;
 	overflow-x: hidden;
 	outline: none !important;
+	z-index: 0;
 	.vtr-widget {
 		background: $screen_dark_70;
 		max-width: 33%;
